[package]
name = "body-logger"
version = "0.1.0"
authors = ["matt turner <you@spam.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
wasm-bindgen = "0.2"
base64 = "0.13"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json ="1.0"
log = { version = "0.4", features = ["kv_unstable"]}
